--- a/index.html
+++ b/index.html
@@ -893,7 +893,7 @@
 								<figcaption>
 									<h3>Project Name</h3>
 									<p>Design</p><i class="fas fa-video"></i>
-									<a class="video-link" href="https://www.youtube.com/watch?v=k_okcNVZqqI"></a>
+									<a class="video-link" href="https://www.youtube.com/watch?v=tll2w8Oh7_g"></a>
 								</figcaption>
 							</figure>
 						</div>
