--- a/index.html
+++ b/index.html
@@ -1054,7 +1054,7 @@
 							<div class="blog-item">
 								<div class="thumbnail">
 									<a href="single-blog.html"><img alt="" src="img/blog/img-6.jpg"></a>
-									<a href="https://www.youtube.com/watch?v=k_okcNVZqqI" class="btn-play"></a>
+									<a href="https://www.youtube.com/watch?v=tll2w8Oh7_g" class="btn-play"></a>
 								</div>
 								<h4><a href="single-blog.html">Road to success</a></h4>
 								<ul>
