--- a/index-image.html
+++ b/index-image.html
@@ -393,7 +393,7 @@
 						<!-- Header Block -->
 						<div class="col-md-12">
 							<div class="header-box mb-50">
-								<h3>Testimonials</h3>
+								<h3>Comentarios</h3>
 							</div>
 						</div>
 						
