--- a/index.html
+++ b/index.html
@@ -901,11 +901,11 @@
 					         <!-- Portfolio Item -->
 						<div class="item col-lg-4 col-sm-6 design">
 							<figure>
-								<img alt="" src="img/portfolio/img-5.jpg">
+								<img alt="" src="img/portfolio/imagen-12.jpeg">
 								<figcaption>
 									<h3>Project Name</h3>
 									<p>Design</p><i class="fas fa-video"></i>
-									<a class="video-link" href="https://www.youtube.com/watch?v=tll2w8Oh7_g"></a>
+									<a class="video-link" href="https://www.youtube.com/watch?v=JudqK1hL18w&list=OLAK5uy_mwl4WAb1lQZIk1Q3Ezh1tAbRM9cRbSsFU"></a>
 								</figcaption>
 							</figure>
 						</div>
