--- a/index.html
+++ b/index.html
@@ -905,7 +905,7 @@
 								<figcaption>
 									<h3>Project Name</h3>
 									<p>Design</p><i class="fas fa-video"></i>
-									<a class="video-link" href="https://www.youtube.com/watch?v=JudqK1hL18w&list=OLAK5uy_mwl4WAb1lQZIk1Q3Ezh1tAbRM9cRbSsFU"></a>
+									<a class="video-link" href="https://youtu.be/JudqK1hL18w"></a>
 								</figcaption>
 							</figure>
 						</div>
