--- a/index-image.html
+++ b/index-image.html
@@ -935,6 +935,18 @@
 						</div>
 						
 						<!-- Portfolio Item -->
+						<div class="item col-lg-4 col-sm-6 design">
+							<figure>
+								<img alt="" src="img/portfolio/img-14.jpg">
+								<figcaption>
+									<h3>Project Name</h3>
+									<p>Design</p><i class="fas fa-video"></i>
+									<a class="video-link" href="https://www.youtube.com/watch?v=YrtMpe0WOpc"></a>
+								</figcaption>
+							</figure>
+						</div>
+						
+						<!-- Portfolio Item -->
 						<div class="item col-lg-4 col-sm-6 brand">
 							<figure>
 								<img alt="" src="img/portfolio/img-6.jpg">
