--- a/index-image.html
+++ b/index-image.html
@@ -581,7 +581,7 @@
 					
 					<!-- Section Title -->
 					<div class="header-page mt-70 mob-mt">
-						<h2>Resume</h2>
+						<h2>Resumen de noticias</h2>
     					<span></span>
 					</div>
 					
