--- a/index.html
+++ b/index.html
@@ -77,12 +77,12 @@
 		</div>
 		
 		<!-- Main Site -->
-		<div id="home">
-  		<div id="about">
-    	<div id="resume">
-     	<div id="portfolio">
-        <div id="blog">
-		<div id="contact">
+		<div id="Inicio">
+  		<div id="Nosotros">
+    	<div id="Resumen">
+     	<div id="Multimedia">
+        <div id="Noticias">
+		<div id="Contacto">
 			
 			<div class="header-mobile">
                 <a class="header-toggle"><i class="fas fa-bars"></i></a>
