--- a/index.html
+++ b/index.html
@@ -593,7 +593,7 @@
 						
 							<!-- Header Block -->
 							<div class="header-box mb-50">
-								<h3>Experience</h3>
+								<h3>Pagina 1</h3>
 							</div>
 						
 							<div class="experience box">
@@ -601,10 +601,10 @@
 								<!-- Experience Item -->
 								<div class="item">
 									<div class="main">
-										<h4>Web Design</h4>
-										<p><i class="far fa-calendar-alt"></i>2012 - 2014 | Сompany Inc</p>
+										<h4>Nuevas ideas para el ajuste fiscal</h4>
+										<p><i class="far fa-calendar-alt"></i>24/06/2021 | LA VANGUARDIA</p>
 									</div>
-									<p>Work experience is essential for getting a job. Whether it's a short work placement or a longer internship, work experience is always viewed favourably by employers and can help you decide your future career.</p>
+									<p>Hacen falta nuevas ideas fiscales para un nuevo mundo económico. Están en la lista los impuestos ambientales, sobre determinados patrones de consumo y sobre transacciones digitales casi espurias para la tributación tradicional. No todas ellas tienen un objetivo recaudatorio. En algunas su éxito sería que no recaudaran nada (las tasas ambientales son para frenar la contaminación, gravar ciertos consumos para el cambio de estilos de vida).</p>
 								</div>
 
 								<!-- Experience Item -->
