--- a/index-image.html
+++ b/index-image.html
@@ -610,10 +610,10 @@
 								<!-- Experience Item -->
 								<div class="item">
 									<div class="main">
-										<h4>Fornt-End Developer</h4>
-										<p><i class="far fa-calendar-alt"></i>2014 - 2015 | Сompany Inc</p>
+										<h4>Alemania pide no viajar a Londres por la Eurocopa</h4>
+										<p><i class="far fa-calendar-alt"></i>24/06/2021 | DW</p>
 									</div>
-									<p>Work experience is essential for getting a job. Whether it's a short work placement or a longer internship, work experience is always viewed favourably by employers and can help you decide your future career.</p>
+									<p>Las autoridades alemanas insistieron en su recomendación a los aficionados de no viajar a Londres para el partido de octavos de final de la Eurocopa contra Inglaterra, el próximo martes 29/6/2021, debido al riesgo que representa la alta difusión de la variante Delta del coronavirus en el Reino Unido</p>
 								</div>
 
 								<!-- Experience Item -->
