--- a/index.html
+++ b/index.html
@@ -619,10 +619,10 @@
 								<!-- Experience Item -->
 								<div class="item">
 									<div class="main">
-										<h4>Web Development</h4>
-										<p><i class="far fa-calendar-alt"></i>2015 - 2019 | Сompany Inc</p>
+										<h4>federación colombiana de fútbol pide a la Conmebol suspensión de los árbitros del partido Brasil vs Colombia</h4>
+										<p><i class="far fa-calendar-alt"></i>24/06/2021 | Semana</p>
 									</div>
-									<p>Work experience is essential for getting a job. Whether it's a short work placement or a longer internship, work experience is always viewed favourably by employers and can help you decide your future career.</p>
+									<p>la FCF dice que el balón interceptado por el árbitro Néstor Pitana sí derivó “en un ataque prometedor para el equipo brasilero que termina en gol”.</p>
 								</div>
 							</div>
 						</div>
