--- a/index-image.html
+++ b/index-image.html
@@ -632,7 +632,7 @@
 						
 							<!-- Header Block -->
 							<div class="header-box mb-50 mob-box-mt">
-								<h3>Education</h3>
+								<h3>Pagina 2</h3>
 							</div>
 						
 							<div class="experience box">
@@ -640,10 +640,10 @@
 								<!-- Education Item -->
 								<div class="item">
 									<div class="main">
-										<h4>Phd</h4>
-										<p><i class="far fa-calendar-alt"></i>2011 - 2013 | Computer Science</p>
+										<h4>Marchas en Providencia por incumplimiento de reconstrucción</h4>
+										<p><i class="far fa-calendar-alt"></i>23/06/2021 | El Espectador</p>
 									</div>
-									<p>Work experience is essential for getting a job. Whether it's a short work placement or a longer internship, work experience is always viewed favourably by employers and can help you decide your future career.</p>
+									<p>Los habitantes de la isla de providencia exigen al gobierno el cumplimiento de la reconstrucción de sus viviendas destruidas por el huracán lota hace 7 meses, en el cual protestan en la "Marcha de la dignidad" que las viviendas no han sido construidas.</p>
 								</div>
 
 								<!-- Education Item -->
