--- a/index.html
+++ b/index.html
@@ -649,19 +649,19 @@
 								<!-- Education Item -->
 								<div class="item">
 									<div class="main">
-										<h4>Post Graduation</h4>
-										<p><i class="far fa-calendar-alt"></i>2013 - 2016 | Computer Science</p>
+										<h4>¿Están colgados los proyectos de nuevas fuentes de energía?</h4>
+										<p><i class="far fa-calendar-alt"></i>24/06/2021 | El espectador</p>
 									</div>
-									<p>Work experience is essential for getting a job. Whether it's a short work placement or a longer internship, work experience is always viewed favourably by employers and can help you decide your future career.</p>
+									<p>con la llegada de las primeras turbinas para el plan guajira I de Isagen se concretan proyectos de fuentes no convencionales de energía que impulsarán la transición energética del país. Muchos especialistas consideraban que este proceso iba a debilitar el precio de los combustibles fósiles,pero no ha sido así. La demanda mundial por crudo se fortalecerá con la recuperación de la economía mundial, afectada por la pandemia. Solo en tres o cuatro años se espera un repunte de las energías renovables no tradicionales.</p>
 								</div>
 
 								<!-- Education Item -->
 								<div class="item">
 									<div class="main">
-										<h4>Gradution</h4>
-										<p><i class="far fa-calendar-alt"></i>2016 - 2018 | Computer Science</p>
+										<h4>Diálogo entre sobrevivientes secuestrados y exjefes de las FARC</h4>
+										<p><i class="far fa-calendar-alt"></i>24/06/2021 | El Tiempo</p>
 									</div>
-									<p>Work experience is essential for getting a job. Whether it's a short work placement or a longer internship, work experience is always viewed favourably by employers and can help you decide your future career.</p>
+									<p>Tras el encuentro de diálogo entre víctimas del secuestro y exjefes de la exguerrilla de las FARC, Ingrid Betancourt dijo que no hubo ninguna expresión de emoción ni arrepentimiento por parte de los exjefes, las víctimas concluyen que no hay sentimiento de perdón que verdaderamente les nazca del corazón, y que esperan algún día que Colombia llore toda unida.</p>
 								</div>
 							</div>
 						</div>
