--- a/index-image.html
+++ b/index-image.html
@@ -828,7 +828,7 @@
 						<div class="col-lg-12 col-sm-12 portfolio-filter">
 							<ul>
 								<li class="active" data-filter="*">All</li>
-								<li data-filter=".brand">Brand</li>
+								<li data-filter=".brand">Peliculas</li>
 								<li data-filter=".design">Musica</li>
 								<li data-filter=".graphic">Graphic</li>
 							</ul>
@@ -865,11 +865,11 @@
 						<!-- Portfolio Item -->
 						<div class="item col-lg-4 col-sm-6 brand">
 							<figure>
-								<img alt="" src="img/portfolio/img-3.jpg">
+								<img alt="" src="img/portfolio/img-16.jpg">
 								<figcaption>
-									<h3>Project Name</h3>
-									<p>Graphic</p><i class="fas fa-video"></i>
-									<a class="video-link" href="https://www.youtube.com/watch?v=k_okcNVZqqI"></a>
+									<h3>Nueva Pelicula!</h3>
+									<p>peliculas</p><i class="fas fa-video"></i>
+									<a class="video-link" href="https://www.youtube.com/watch?v=4kElkE8SHr0"></a>
 								</figcaption>
 							</figure>
 						</div>
