--- a/index.html
+++ b/index.html
@@ -877,11 +877,11 @@
 						<!-- Portfolio Item -->
 						<div class="item col-lg-4 col-sm-6 brand">
 							<figure>
-								<img alt="" src="img/portfolio/img-16.jpg">
+								<img alt="" src="img/portfolio/img-17.jpg">
 								<figcaption>
 									<h3>Nueva Pelicula!</h3>
 									<p>peliculas</p><i class="fas fa-video"></i>
-									<a class="video-link" href="https://www.youtube.com/watch?v=4kElkE8SHr0"></a>
+									<a class="video-link" href="https://www.youtube.com/watch?v=Uibt8QRqn88"></a>
 								</figcaption>
 							</figure>
 						</div>
@@ -889,11 +889,11 @@
 						<!-- Portfolio Item -->
 						<div class="item col-lg-4 col-sm-6 brand">
 							<figure>
-								<img alt="" src="img/portfolio/img-16.jpg">
+								<img alt="" src="img/portfolio/img-18.jpg">
 								<figcaption>
 									<h3>Nueva Pelicula!</h3>
 									<p>peliculas</p><i class="fas fa-video"></i>
-									<a class="video-link" href="https://www.youtube.com/watch?v=4kElkE8SHr0"></a>
+									<a class="video-link" href="https://www.youtube.com/watch?v=fp_milOcghU"></a>
 								</figcaption>
 							</figure>
 						</div>
@@ -901,11 +901,11 @@
 						<!-- Portfolio Item -->
 						<div class="item col-lg-4 col-sm-6 brand">
 							<figure>
-								<img alt="" src="img/portfolio/img-16.jpg">
+								<img alt="" src="img/portfolio/img-19.jpg">
 								<figcaption>
 									<h3>Nueva Pelicula!</h3>
 									<p>peliculas</p><i class="fas fa-video"></i>
-									<a class="video-link" href="https://www.youtube.com/watch?v=4kElkE8SHr0"></a>
+									<a class="video-link" href="https://www.youtube.com/watch?v=MsikwzKDZ6I"></a>
 								</figcaption>
 							</figure>
 						</div>
