--- a/index.html
+++ b/index.html
@@ -889,7 +889,7 @@
 						<!-- Portfolio Item -->
 						<div class="item col-lg-4 col-sm-6 brand">
 							<figure>
-								<img alt="" src="img/portfolio/img-18.jpg">
+								<img alt="" src="img/portfolio/img-18.png">
 								<figcaption>
 									<h3>Nueva Pelicula!</h3>
 									<p>peliculas</p><i class="fas fa-video"></i>
