--- a/index-image.html
+++ b/index-image.html
@@ -1069,7 +1069,7 @@
 						<!-- Portfolio Item -->
 						<div class="item col-lg-4 col-sm-6 design">
 							<figure>
-								<img alt="" src="img/portfolio/img-15.jpg">
+								<img alt="" src="img/portfolio/img-15.jpeg">
 								<figcaption>
 									<h3>Project Name</h3>
 									<p>Design</p><i class="fas fa-video"></i>
