--- a/index.html
+++ b/index.html
@@ -1023,8 +1023,8 @@
 							<figure>
 								<img alt="" src="img/portfolio/img-5.jpg">
 								<figcaption>
-									<h3>Project Name</h3>
-									<p>Design</p><i class="fas fa-video"></i>
+									<h3>Nueva Musica!</h3>
+									<p>Musica</p><i class="fas fa-video"></i>
 									<a class="video-link" href="https://www.youtube.com/watch?v=tll2w8Oh7_g"></a>
 								</figcaption>
 							</figure>
@@ -1035,8 +1035,8 @@
 							<figure>
 								<img alt="" src="img/portfolio/imagen-12.jpeg">
 								<figcaption>
-									<h3>Project Name</h3>
-									<p>Design</p><i class="fas fa-video"></i>
+									<h3>Nueva Musica!</h3>
+									<p>Musica</p><i class="fas fa-video"></i>
 									<a class="video-link" href="https://www.youtube.com/watch?v=JudqK1hL18w"></a>
 								</figcaption>
 							</figure>
@@ -1047,8 +1047,8 @@
 							<figure>
 								<img alt="" src="img/portfolio/img-13.jpg">
 								<figcaption>
-									<h3>Project Name</h3>
-									<p>Design</p><i class="fas fa-video"></i>
+									<h3>Nueva Musica!</h3>
+									<p>Musica</p><i class="fas fa-video"></i>
 									<a class="video-link" href="https://www.youtube.com/watch?v=SM-BT9cijI4"></a>
 								</figcaption>
 							</figure>
@@ -1059,8 +1059,8 @@
 							<figure>
 								<img alt="" src="img/portfolio/img-14.jpg">
 								<figcaption>
-									<h3>Project Name</h3>
-									<p>Design</p><i class="fas fa-video"></i>
+									<h3>Nueva Musica!</h3>
+									<p>Musica</p><i class="fas fa-video"></i>
 									<a class="video-link" href="https://www.youtube.com/watch?v=YrtMpe0WOpc"></a>
 								</figcaption>
 							</figure>
@@ -1071,8 +1071,8 @@
 							<figure>
 								<img alt="" src="img/portfolio/img-15.jpeg">
 								<figcaption>
-									<h3>Project Name</h3>
-									<p>Design</p><i class="fas fa-video"></i>
+									<h3>Nueva Musica!</h3>
+									<p>Musica</p><i class="fas fa-video"></i>
 									<a class="video-link" href="https://www.youtube.com/watch?v=MGVhxoYGvmg"></a>
 								</figcaption>
 							</figure>
