--- a/index.html
+++ b/index.html
@@ -830,7 +830,7 @@
 								<li class="active" data-filter="*">All</li>
 								<li data-filter=".brand">Peliculas</li>
 								<li data-filter=".design">Musica</li>
-								<li data-filter=".graphic">Graphic</li>
+								<li data-filter=".graphic">Arte</li>
 							</ul>
 						</div>
 					</div>
@@ -1092,6 +1092,9 @@
 								</figcaption>
 							</figure>
 						</div>
+					 </div>
+				</section>
+       	   	        </div>		
 					
 			 <!-- Blog Section -->
           	<div class="page pt-blog" data-simplebar>
