--- a/index.html
+++ b/index.html
@@ -129,6 +129,11 @@
 						<span></span>
       				</div>
 					<p> Musica </p>
+				<audio  autoplay loop>
+						<source src="audio/cancionfondo.mp3" type="audio/mp3">
+						tu navegador no permite reproducir este archivo
+						
+					</audio>
     			</a>
 			 </nav>
 			
