--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
       				</div>
 					<p> Musica </p>
 				<audio  autoplay loop>
-						<source src="img/audio/cancionfondo.mp3" type="audio/mp3">
+						<source src="img/audio/cancionfondo.mp3" type="img/audio/mp3">
 						tu navegador no permite reproducir este archivo
 						
 					</audio>
