--- a/index.html
+++ b/index.html
@@ -129,8 +129,9 @@
 						<span></span>
       				</div>
 					<p> Musica </p>
+				
 				<audio  autoplay loop>
-						<source src="img/audio/cancionfondo.mp3" type="img/audio/mp3">
+						<source src="img/audio/cancionfondo.mp3" type="img/audio/cancionfondo.mp3">
 						tu navegador no permite reproducir este archivo
 						
 					</audio>
