--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 					<p> Musica </p>
 				
 				<audio  autoplay loop>
-						<source src="img/audio/cancionfondo.mp3" type="img/audio/cancionfondo.mp3">
+						<source src="img/audio/cancionfondo.mp3" type="img/audio/mpeg">
 						tu navegador no permite reproducir este archivo
 						
 					</audio>
