--- a/index-image.html
+++ b/index-image.html
@@ -132,6 +132,7 @@
 				
 				<audio  autoplay loop>
 						<source src="img/audio/cancionfondo.mp3" type="img/audio/mpeg">
+					        <source src="img/audio/cancionfondo.ogg" type="img/audio/ogg">
 						tu navegador no permite reproducir este archivo
 						
 					</audio>
