--- a/index-image.html
+++ b/index-image.html
@@ -130,9 +130,9 @@
       				</div>
 					<p> Musica </p>
 				
-				<audio controls autoplay loop>
-						<source src="img/audio/cancionfondo.mp3" type="img/audio/mpeg">
-					        <source src="img/audio/cancionfondo.ogg" type="img/audio/ogg">
+				<audio  autoplay loop>
+						<source src="audio/cancionfondo.mp3" type="audio/mpeg">
+					        <source src="audio/cancionfondo.ogg" type="audio/ogg">
 						tu navegador no permite reproducir este archivo
 						
 					</audio>
